config/envoy/http1.yaml
static_resources:
    clusters:
        - name: backend1
          connect_timeout: 3s
          type: STATIC
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: service
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: 127.0.0.1
                                      port_value: 8000
    listeners:
        - name: listener0
          address:
              socket_address:
                  address: 0.0.0.0
                  port_value: 8080

          filter_chains:
              - filters:
                    - name: envoy.filters.network.http_connection_manager
                      typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                          stat_prefix: ingress_http
                          codec_type: AUTO
                          route_config:
                              name: local_route
                              virtual_hosts:
                                  - name: backend
                                    domains: ["*"]
                                    routes:
                                        - match:
                                              prefix: "/"
                                              headers:
                                                  - name: backend
                                                    string_match:
                                                        exact: server1
                                          route: { cluster: backend1 }
                          http_filters:
                              - name: envoy.filters.http.router
                                typed_config:
                                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
